   fields are null - thanks to Benjamin Klatt for finding this bug
4. Fixed IBATIS-601 - improper validation of <generatedKey>
5. Fixed IBATIS-609 - incorrect parsing of Java generic types
6. Fixed spelling error LONCVARCHAR->LONGVARCHAR (thanks Allard)
7. Fixed IBATIS-731 - change name of primary key variable to avoid conflicts
8. Fixed IBATIS-699 - Overwrite unmergeable XML files if enabled

Enhancements:
1. IBATIS-569 - Make it easier to override IbatorRules in plugins
2. IBATIS-571 - Added "autoDelimitKeywords" support to <ibatorContext>
3. IBATIS-577 - Define SQL fragments for column lists.  Thanks to Iwao
   AVE! for the idea and the initial patch
4. Added some additional command line arguments
5. Added logging
6. Added Case Insensitive LIKE example Plugin
7. Added delimitAllCoumns to table configurations
8. Added page describing some of PostgreSQL idiosyncracies with Ibator
9. IBATIS-586 - Added the ability to specify nested property elements on
   columnOverrides (thanks to Dan Turkenkopf for the idea and a nice initial patch)
10. Gather column comments during introspection
11. IBATIS-592 - Additional attributes for SqlMaps
12. Fixed addCriterionforJDBC* methods so that they all do a null check
13. Fixed IbatorRunner so that configuration errors are shown (thanks to Karel Rank)
14. Added XML ids to changeable attributes on introspected table, also
    change the XML merger so that the XML ids no longer need to contain
    the prefix "ibatorgenerated_"
15. Many refactorings to make way for iBATIS3
16. IBATIS-605 - Added Informix Dialect
17. Added ability to set annotations on method parameters
18. Addedd support for "distinct" on select by example methods
19. Added new "or" method to example classes
20. Added new "useCompoundPropertyNames" property on <table>
21. Further improved extensibility of the example classes


-------------------------------------------------------------------------------
Version 1.2.1:

Bugs: