@@ -3,6 +3,8 @@ package ibatortest.java2.execute.miscellaneous;
 import ibatortest.java2.AbstractTest;
 import ibatortest.java2.generated.miscellaneous.dao.MyObjectDAO;
 import ibatortest.java2.generated.miscellaneous.dao.MyObjectDAOImpl;
+import ibatortest.java2.generated.miscellaneous.dao.RegexrenameDAO;
+import ibatortest.java2.generated.miscellaneous.dao.RegexrenameDAOImpl;
 
 public abstract class AbstractMiscellaneousTest extends AbstractTest {
 
@@ -14,6 +16,11 @@ public abstract class AbstractMiscellaneousTest extends AbstractTest {
     
     protected MyObjectDAO getMyObjectDAO() {
         MyObjectDAOImpl dao = new MyObjectDAOImpl(getSqlMapClient());
+        return dao;
+    }
+    
+    protected RegexrenameDAO getRegexrenameDAO() {
+        RegexrenameDAOImpl dao = new RegexrenameDAOImpl(getSqlMapClient());
         return dao;
     }
 }
